fixed petcare spacing and carousel and minor details in screen sizes

--- a/src/css/user.css
+++ b/src/css/user.css
@@ -88,7 +88,7 @@ h4 {
 }
 
 .adoptableImg {
-  max-height: 100%;
+  max-height: 50vw;
   max-width: 100%;
   border-radius: 25px;
 }
@@ -101,10 +101,10 @@ h4 {
 }
 
 .dogImgContainer {
-  padding: 3%;
+  padding: 3% 1.5% 3% 3%;
 }
 .dogTextContainer {
-  padding: 3%;
+  padding: 3% 3% 3% 1.5%;
 }
 .adoptionFormBox {
   border-left: #144771 solid 5px;
@@ -146,7 +146,7 @@ div.container-fluid {
 
 .userNav {
   background-color: #144771;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 #noPadding {
@@ -158,8 +158,8 @@ div.container-fluid {
 }
 
 .homeNavLink {
-  margin: 0 15px;
-  padding: 0px;
+  /* margin: 0 15px;
+  padding: 0px; */
   color: #c7c5c5 !important;
   color: #f0f0f0 !important;
 }
@@ -226,8 +226,16 @@ div.container-fluid {
 }
 
 .petCareCarouselPics {
+    border-radius: 25px;
+
   height: 400px;
-  object-fit: cover;
+  /* height: 100%; */
+  object-fit: cover; 
+  object-position: center;
+}
+.actualCarousel{
+    border-radius: 25px;
+ width: 500px;
 }
 
 .donatePics {
@@ -248,9 +256,13 @@ div.container-fluid {
   color: #144771;
   display: inline-block;
   font-weight: bolder;
+
 }
 .donateHeaders:hover {
   color: #144771;
+}
+.noWrap{
+    white-space: nowrap;
 }
 
 .donateHeaders::after {
@@ -369,7 +381,8 @@ div.container-fluid {
 }
 
 #picB {
-  max-height: 50vh;
+    max-height: 400px;
+  /* max-height: 50vh; */
   max-width: 100%;
   border-radius: 25px;
 }
@@ -392,7 +405,7 @@ div.container-fluid {
 
 .fullPic {
   max-width: 100%;
-  max-height: 50vh;
+  max-height: 400px;
   border-radius: 25px;
   padding: 0px 0px;
 }
@@ -412,6 +425,9 @@ div.container-fluid {
 .squishTxt {
   padding: 0 20%;
 }
+.squishTxtMini {
+    padding: 0 10%;
+  }
 /** @ media this **/
 #logoPic {
   height: 160px;
@@ -443,6 +459,12 @@ hr {
   margin-right: -15px;
 }
 
+.smushDiv{
+    border: green solid 0px;
+    width:100%;
+    margin: auto;
+}
+
 /* X-Small devices (portrait phones, less than 576px)
 No media query for `xs` since this is the default in Bootstrap */
 
@@ -452,6 +474,12 @@ No media query for `xs` since this is the default in Bootstrap */
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+ 
+
+    .homeNavLink {
+        margin: 0 15px;
+        padding: 0px;
+    }
   .userNavClass {
     position: absolute;
     bottom: 0;
@@ -481,6 +509,18 @@ No media query for `xs` since this is the default in Bootstrap */
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
+    .fullPic {
+        max-width: 100%;
+        max-height: 25vw;
+        border-radius: 25px;
+        padding: 0px 0px;
+      }
+      #picB {
+        max-height: 25vw;
+      /* max-height: 50vh; */
+      max-width: 100%;
+      border-radius: 25px;
+    }
   body {
     font-size: 100%;
   }
@@ -488,23 +528,47 @@ No media query for `xs` since this is the default in Bootstrap */
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+
   body {
     font-size: 100%;
   }
-  hr {
-    height: 10px !important;
+  /* .fullPic {
+    max-height: 20vh;
   }
+  #picB {
+    max-height: 20vh;
+  } */
+
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1500px) {
+        #logoPic {
+        height: 200px;
+      }
   body {
     font-size: 120%;
   }
+  hr {
+    height: 6px !important;
+  }
+  .fullPic {
+    max-height: 20vw;
+  }
+  #picB {
+    max-height: 20vw;
+  }
 }
+
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 2500px) {
+    #logoPic {
+        height: 250px;
+      }
+    hr {
+        height: 10px !important;
+      }
   body {
     font-size: 150%;
   }
@@ -512,25 +576,75 @@ No media query for `xs` since this is the default in Bootstrap */
   .aboutDogText {
     width: 100%;
   }
+  .petCareCarouselPics {
+    height: 600px;
+  }
+  .actualCarousel{
+    width: 75%;
+  }
+
+  .container {
+    width: 80%;
+    max-width: none;
+    /* padding: 0; */
+  }
+  .fullPic {
+    max-height: 20vw;
+  }
+  #picB {
+    max-height: 20vw;
+  }
 }
 
 @media (min-width: 3000px) {
+    #logoPic {
+        height: 300px;
+      }
+      .petCareCarouselPics {
+        height: 700px;
+      }
+      .actualCarousel{
+        width: 75%;
+      }
   body {
     font-size: 200%;
   }
   .container {
-    width: 100%;
+    width: 80%;
     max-width: none;
     padding: 0;
   }
 }
 
 @media (min-width: 3500px) {
+    #logoPic {
+        height: 350px;
+      }
+      .petCareCarouselPics {
+        height: 700px;
+      }
+      .actualCarousel{
+        width: 65%;
+      }
   body {
     font-size: 220%;
   }
 }
+@media (min-width: 4000px) {
+    .petCareCarouselPics {
+        height: 800px;
+      }
+      .actualCarousel{
+        width: 65%;
+      }
+    /* .petCareCarouselPics {
+        height: 1200px;
+      } */
+}
 @media (min-width: 4300px) {
+    #logoPic {
+        height: 400px;
+      }
   body {
     font-size: 250%;
   }
@@ -539,16 +653,64 @@ No media query for `xs` since this is the default in Bootstrap */
     margin-top: 80px;
     margin-bottom: 80px;
   }
+
+}
+@media (min-width: 4500px) {
+    .fullPic {
+        max-height: 18vw;
+      }
+      #picB {
+        max-height: 18vw;
+      }
+    .petCareCarouselPics {
+        height: 900px;
+      }
+      .actualCarousel{
+        width: 65%;
+      }
+}
+@media (min-width: 5000px) {
+    .petCareCarouselPics {
+        height: 900px;
+      }
+      .actualCarousel{
+        width: 55%;
+      }
 }
 
 /* XX-Large devices (larger desktops) */
 /* No media query since the xxl breakpoint has no upper bound on its width */
 /* X-Small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
+
 }
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
+
+    /* .homeMainPart .container{
+        padding-left: 0;
+        padding-right:0;
+        margin-left: 0;
+        margin-right: 0;
+    } */
+
+    .actualCarousel{
+        border-radius: 25px;
+     width: 100%;
+    }
+
+    .donateDiv .container{
+        padding-left: 0;
+        padding-right:0;
+        /* border: red solid 2px; */
+    }
+    .dogImgContainer {
+        padding: 3%
+      }
+      .dogTextContainer {
+        padding: 3%;
+      }
   .centerSmall {
     justify-content: center;
   }
@@ -577,6 +739,9 @@ No media query for `xs` since this is the default in Bootstrap */
   }
   .squishTxt {
     padding: 0 10%;
+  }
+  .squishTxtMini {
+    padding: 0 5%;
   }
   #hideOnPhone {
     display: none !important;
@@ -609,12 +774,26 @@ No media query for `xs` since this is the default in Bootstrap */
 
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
+    .p-5 {
+        padding: 0 5px 3rem 5px !important
+    }
+    .actualCarousel{
+        margin-bottom:20px;
+            }
 }
 
 /* Large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
+    .petCareNotice{
+        margin-top: 2rem;
+    }
 }
 
 /* X-Large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) {
+}
+
+.paddingTopBottom{
+    padding-top: 3rem;
+    padding-Bottom: 3rem;
 }
